--- a/w3resource_numpy_basic_exercises.ipynb
+++ b/w3resource_numpy_basic_exercises.ipynb
@@ -1,6 +1,148 @@
 {
- "cells": [],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nakonakata/numpy_colab/blob/main/w3resource_numpy_basic_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Get NumPy Version & Build Info\n",
+        "\n",
+        "Write a Numpy program to get the Numpy version and show the Numpy build configuration."
+      ],
+      "metadata": {
+        "id": "0r-XLJlzZObd"
+      },
+      "id": "0r-XLJlzZObd"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing the NumPy library with an alias 'np'\n",
+        "import numpy as np\n",
+        "\n",
+        "# Printing the version of NumPy installed\n",
+        "print(np.__version__)\n",
+        "\n",
+        "# Printing the configuration details of NumPy\n",
+        "print(np.show_config())"
+      ],
+      "metadata": {
+        "id": "YB3sSbWXZQzF",
+        "outputId": "f997b672-bdad-46df-9eab-0c4b2c9171da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "YB3sSbWXZQzF",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.0.2\n",
+            "Build Dependencies:\n",
+            "  blas:\n",
+            "    detection method: pkgconfig\n",
+            "    found: true\n",
+            "    include directory: /opt/_internal/cpython-3.12.2/lib/python3.12/site-packages/scipy_openblas64/include\n",
+            "    lib directory: /opt/_internal/cpython-3.12.2/lib/python3.12/site-packages/scipy_openblas64/lib\n",
+            "    name: scipy-openblas\n",
+            "    openblas configuration: OpenBLAS 0.3.27  USE64BITINT DYNAMIC_ARCH NO_AFFINITY\n",
+            "      Zen MAX_THREADS=64\n",
+            "    pc file directory: /project/.openblas\n",
+            "    version: 0.3.27\n",
+            "  lapack:\n",
+            "    detection method: pkgconfig\n",
+            "    found: true\n",
+            "    include directory: /opt/_internal/cpython-3.12.2/lib/python3.12/site-packages/scipy_openblas64/include\n",
+            "    lib directory: /opt/_internal/cpython-3.12.2/lib/python3.12/site-packages/scipy_openblas64/lib\n",
+            "    name: scipy-openblas\n",
+            "    openblas configuration: OpenBLAS 0.3.27  USE64BITINT DYNAMIC_ARCH NO_AFFINITY\n",
+            "      Zen MAX_THREADS=64\n",
+            "    pc file directory: /project/.openblas\n",
+            "    version: 0.3.27\n",
+            "Compilers:\n",
+            "  c:\n",
+            "    commands: cc\n",
+            "    linker: ld.bfd\n",
+            "    name: gcc\n",
+            "    version: 10.2.1\n",
+            "  c++:\n",
+            "    commands: c++\n",
+            "    linker: ld.bfd\n",
+            "    name: gcc\n",
+            "    version: 10.2.1\n",
+            "  cython:\n",
+            "    commands: cython\n",
+            "    linker: cython\n",
+            "    name: cython\n",
+            "    version: 3.0.11\n",
+            "Machine Information:\n",
+            "  build:\n",
+            "    cpu: x86_64\n",
+            "    endian: little\n",
+            "    family: x86_64\n",
+            "    system: linux\n",
+            "  host:\n",
+            "    cpu: x86_64\n",
+            "    endian: little\n",
+            "    family: x86_64\n",
+            "    system: linux\n",
+            "Python Information:\n",
+            "  path: /tmp/build-env-8744k94k/bin/python\n",
+            "  version: '3.12'\n",
+            "SIMD Extensions:\n",
+            "  baseline:\n",
+            "  - SSE\n",
+            "  - SSE2\n",
+            "  - SSE3\n",
+            "  found:\n",
+            "  - SSSE3\n",
+            "  - SSE41\n",
+            "  - POPCNT\n",
+            "  - SSE42\n",
+            "  - AVX\n",
+            "  - F16C\n",
+            "  - FMA3\n",
+            "  - AVX2\n",
+            "  not found:\n",
+            "  - AVX512F\n",
+            "  - AVX512CD\n",
+            "  - AVX512_KNL\n",
+            "  - AVX512_KNM\n",
+            "  - AVX512_SKX\n",
+            "  - AVX512_CLX\n",
+            "  - AVX512_CNL\n",
+            "  - AVX512_ICL\n",
+            "\n",
+            "None\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
