--- a/w3resource_numpy_basic_exercises.ipynb
+++ b/w3resource_numpy_basic_exercises.ipynb
@@ -36,13 +36,14 @@
       ],
       "metadata": {
         "id": "YB3sSbWXZQzF",
-        "outputId": "f997b672-bdad-46df-9eab-0c4b2c9171da",
+        "outputId": "f4d04141-f5d4-452e-e2f9-532e058de666",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "id": "YB3sSbWXZQzF",
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,6 +129,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Help for NumPy Add Function\n",
+        "\n",
+        "Write a NumPy program to get help with the add function."
+      ],
+      "metadata": {
+        "id": "VyXFLrcnbPxL"
+      },
+      "id": "VyXFLrcnbPxL"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UtBrtZqCbU6k"
+      },
+      "id": "UtBrtZqCbU6k",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
