--- a/youtube_numpy_tutorial_freecodecamp.ipynb
+++ b/youtube_numpy_tutorial_freecodecamp.ipynb
@@ -29,7 +29,7 @@
           "text": "[1 2 3]\n"
         }
       ],
-      "execution_count": 21
+      "execution_count": 1
     },
     {
       "id": "03864d85-f57c-4481-ab1c-6bd01018e515",
@@ -45,7 +45,7 @@
           "text": "[[9. 8. 7.]\n [6. 5. 4.]]\n"
         }
       ],
-      "execution_count": 22
+      "execution_count": 2
     },
     {
       "id": "4a64b4be-36bd-4445-b7c6-100d07ac12a2",
@@ -61,7 +61,7 @@
           "text": "1\n2\n"
         }
       ],
-      "execution_count": 23
+      "execution_count": 3
     },
     {
       "id": "49fe1eb3-1d4b-43c3-9d92-2b3104626b79",
@@ -77,7 +77,7 @@
           "text": "(3,)\n(2, 3)\n"
         }
       ],
-      "execution_count": 31
+      "execution_count": 4
     },
     {
       "id": "7426888f-e676-409f-b7eb-db0a5081bed9",
@@ -93,7 +93,7 @@
           "text": "3\n6\n"
         }
       ],
-      "execution_count": 27
+      "execution_count": 5
     },
     {
       "id": "54799a67-a1cd-4cb7-ba17-bc473f4b2e62",
@@ -109,7 +109,7 @@
           "text": "int32\nfloat64\n"
         }
       ],
-      "execution_count": 28
+      "execution_count": 6
     },
     {
       "id": "897091be-cab9-40ac-a9e5-8bfae1ac9eb4",
@@ -125,7 +125,7 @@
           "text": "4\n8\n"
         }
       ],
-      "execution_count": 29
+      "execution_count": 7
     },
     {
       "id": "4fa6f701-4995-40e3-b44f-4d2d2d0d5715",
@@ -141,7 +141,7 @@
           "text": "12\n12\n48\n48\n"
         }
       ],
-      "execution_count": 32
+      "execution_count": 8
     },
     {
       "id": "697d212c-b2f2-4dbb-a1bf-c8180ef695d1",
@@ -157,17 +157,356 @@
           "text": "[[ 1  2  3  4  5  6  7]\n [ 8  9 10 11 12 13 14]]\n(2, 7)\n"
         }
       ],
-      "execution_count": 34
+      "execution_count": 9
     },
     {
       "id": "c3d68605-98ce-4015-b533-8ff33d8c30fc",
       "cell_type": "code",
-      "source": "",
+      "source": "# Get a specific element: [row, column]\nprint(c[1,5])\nprint(c[1,-2])",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "13\n13\n"
+        }
+      ],
+      "execution_count": 14
+    },
+    {
+      "id": "96f5157f-b3db-426b-b6f1-73e61b508200",
+      "cell_type": "code",
+      "source": "#Get a specific row\nprint(c[0,:])\nprint(c[0,:].shape)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3 4 5 6 7]\n(7,)\n"
+        }
+      ],
+      "execution_count": 21
+    },
+    {
+      "id": "b279dd5a-2f4b-40f7-81ba-77a0ac00bbc8",
+      "cell_type": "code",
+      "source": "#Get a specific column\nprint(c[:, 2])\nprint(c[:, 2].shape)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[ 3 10]\n(2,)\n"
+        }
+      ],
+      "execution_count": 22
+    },
+    {
+      "id": "1bc458da-89ec-4ba7-9057-6e59257c170a",
+      "cell_type": "code",
+      "source": "# Fancy access (startindex:endindex:stepsize) --> endindex won't be included\nprint(c[0, 1:6:2])\nprint(c[0, 1:-1:2])",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[2 4 6]\n[2 4 6]\n"
+        }
+      ],
+      "execution_count": 27
+    },
+    {
+      "id": "84815237-e71e-4209-af3e-f6bda66f62a6",
+      "cell_type": "code",
+      "source": "c[1,5]=20\nprint(c)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[ 1  2  3  4  5  6  7]\n [ 8  9 10 11 12 20 14]]\n"
+        }
+      ],
+      "execution_count": 29
+    },
+    {
+      "id": "4e519e36-b678-4b0c-b3d9-c9947f621855",
+      "cell_type": "code",
+      "source": "c[:, 2] = 0\nprint(c)\nc[:, 2] = [-1,-2]\nprint(c)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[ 1  2  0  4  5  6  7]\n [ 8  9  0 11 12 20 14]]\n[[ 1  2 -1  4  5  6  7]\n [ 8  9 -2 11 12 20 14]]\n"
+        }
+      ],
+      "execution_count": 31
+    },
+    {
+      "id": "8315a403-1129-4efa-a177-ad2edc7b9be4",
+      "cell_type": "code",
+      "source": "# 3D example (1,2,3,4 on front closer face; 5,6,7,8 behind it) \nb = np.array([ [[1,2],[3,4]] , [[5,6],[7,8]] ])\nprint(b)\nprint(b[0,1,1]) # [depth, row, column]\nprint(b[:,0,0]) # [depth, row, column]",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[[1 2]\n  [3 4]]\n\n [[5 6]\n  [7 8]]]\n4\n[1 5]\n"
+        }
+      ],
+      "execution_count": 41
+    },
+    {
+      "id": "50d23f4f-9034-45f1-b683-c4be48a58b59",
+      "cell_type": "code",
+      "source": "# Replace 3D array\nb[:,1,:] = [[9,9],[8,8]]\nprint(b)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[[1 2]\n  [9 9]]\n\n [[5 6]\n  [8 8]]]\n"
+        }
+      ],
+      "execution_count": 44
+    },
+    {
+      "id": "81e89b6a-c418-49ef-927f-a2475ffa7f4c",
+      "cell_type": "code",
+      "source": "# All 0s \nprint(np.zeros(5, dtype='int16'))\nprint(np.zeros((2,3)))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[0 0 0 0 0]\n[[0. 0. 0.]\n [0. 0. 0.]]\n"
+        }
+      ],
+      "execution_count": 55
+    },
+    {
+      "id": "7d208fa5-d4f8-4866-9723-7da610a7af38",
+      "cell_type": "code",
+      "source": "# All 1s \nprint(np.ones(5))\nprint(np.ones((2,3)))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1. 1. 1. 1. 1.]\n[[1. 1. 1.]\n [1. 1. 1.]]\n"
+        }
+      ],
+      "execution_count": 53
+    },
+    {
+      "id": "238ce19e-af75-4735-be1b-92d110854259",
+      "cell_type": "code",
+      "source": "# Fill with any other number\nprint(np.full((2,4),99))\nprint(np.full_like(c,6))\nprint(np.full(c.shape,8))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[99 99 99 99]\n [99 99 99 99]]\n[[6 6 6 6 6 6 6]\n [6 6 6 6 6 6 6]]\n[[8 8 8 8 8 8 8]\n [8 8 8 8 8 8 8]]\n"
+        }
+      ],
+      "execution_count": 65
+    },
+    {
+      "id": "e0ceca51-7ca8-4952-a2cd-472cbcde38ad",
+      "cell_type": "code",
+      "source": "# Diagonal with 1s\nprint(np.eye(3,2))\nprint(np.eye(3))\nprint(np.identity(3))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[1. 0.]\n [0. 1.]\n [0. 0.]]\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n"
+        }
+      ],
+      "execution_count": 112
+    },
+    {
+      "id": "f842b523-f50c-456a-952f-0debc700a3a9",
+      "cell_type": "code",
+      "source": "# Random decimal numbers between 0.0-1.0\nprint(np.random.rand(4,2))\nprint(np.random.random_sample(a.shape))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[0.20561584 0.18609491]\n [0.70867802 0.58688303]\n [0.26772938 0.66282422]\n [0.14723234 0.37631878]]\n[0.41605455 0.46310036 0.65857571]\n"
+        }
+      ],
+      "execution_count": 108
+    },
+    {
+      "id": "6a99d53c-2e1d-49a1-9335-e3cd651c7c30",
+      "cell_type": "code",
+      "source": "# Random positive/negative integer numbers in range of arguments: [start,end)\nprint(np.random.randint(4,8, size=(4,2)))\nprint(np.random.randint(-3,-1, size=(2,2)))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[7 6]\n [4 5]\n [7 7]\n [7 7]]\n[[-2 -3]\n [-3 -3]]\n"
+        }
+      ],
+      "execution_count": 109
+    },
+    {
+      "id": "07eb9986-0e45-4ad1-a3c5-a733801f03dd",
+      "cell_type": "code",
+      "source": "# Repeat an array in different axes\narr_1 = np.array([1,2,3]) # This is 1-D array (rank-1), so only repeated in 1 axis\nprint(arr_1)\nr1 = np.repeat(arr_1, 3)\nprint(r1)\n\nprint(\"\\n\")\n\narr_2 = np.array([[1,2,3]]) # This is 2-D array (rank-2), can be repeated in 2 axis\nprint(arr_2)\nr2 = np.repeat(arr_2, 3, axis=0)\nprint(r2)\nr2 = np.repeat(arr_2, 3, axis=1)\nprint(r2)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3]\n[1 1 1 2 2 2 3 3 3]\n\n\n[[1 2 3]]\n[[1 2 3]\n [1 2 3]\n [1 2 3]]\n[[1 1 1 2 2 2 3 3 3]]\n"
+        }
+      ],
+      "execution_count": 129
+    },
+    {
+      "id": "7db243fb-1c50-4edc-8fbd-ebacffb485b1",
+      "cell_type": "code",
+      "source": "# Simple practice\ntest = np.ones((5,5))\ntest[1:-1, 1:-1] = 0\ntest[2,2] = 9\ntest",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "execution_count": 139,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "array([[1., 1., 1., 1., 1.],\n       [1., 0., 0., 0., 1.],\n       [1., 0., 9., 0., 1.],\n       [1., 0., 0., 0., 1.],\n       [1., 1., 1., 1., 1.]])"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 139
+    },
+    {
+      "id": "bbb8a8f6-8125-4c9a-84f9-1a1a4a61741b",
+      "cell_type": "code",
+      "source": "# Naive way of copying arrays\nold = np.array([1,2,3])\nprint(old)\nnew = old\nprint(new)\nnew[0] = 100\nprint(new)\nprint(old)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3]\n[1 2 3]\n[100   2   3]\n[100   2   3]\n"
+        }
+      ],
+      "execution_count": 145
+    },
+    {
+      "id": "99486656-29e2-4579-ae60-214586b9e8e8",
+      "cell_type": "code",
+      "source": "# Robust way of copying arrays\nold = np.array([1,2,3])\nprint(old)\nnew = old.copy()\nprint(new)\nnew[0] = 100\nprint(new)\nprint(old)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3]\n[1 2 3]\n[100   2   3]\n[1 2 3]\n"
+        }
+      ],
+      "execution_count": 146
+    },
+    {
+      "id": "0a6c0f74-8cd4-4b83-b46b-cb98d8cbe606",
+      "cell_type": "code",
+      "source": "# Basic math operations\na = np.array([1,2,3,4],dtype='int32')\nprint(a)\nprint(a+2)\nprint(a-2)\nprint(a*2)\nprint(a/2)\nprint(a//2)\nprint(a%2)\na+=9\nprint(a)\nb = np.array([1,-1,1,-1],dtype='int32')\nprint(a**2)\nprint(np.sin(a))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3 4]\n[3 4 5 6]\n[-1  0  1  2]\n[2 4 6 8]\n[0.5 1.  1.5 2. ]\n[0 1 1 2]\n[1 0 1 0]\n[10 11 12 13]\n[100 121 144 169]\n[-0.54402111 -0.99999021 -0.53657292  0.42016704]\n"
+        }
+      ],
+      "execution_count": 166
+    },
+    {
+      "id": "cf6fd34f-7cfe-4c45-9d35-cabf5c750954",
+      "cell_type": "code",
+      "source": "# Linear algebra operations\na = np.ones((2,3))\nprint(a)\n\nb = np.full((3,2),2)\nprint(b)\n\nprint(np.matmul(a,b))\nprint(a @ b)\n\nprint(\"\\n\")\n\nc = np.eye(3)\nprint(c)\nprint(np.linalg.det(c))\nprint(np.linalg.trace(c))\nprint(np.linalg.inv(c))\nprint(c @ b)\n\nprint(\"\\n\")\n\nm = np.array([1, 2, 3])\nn = np.array([4, 5, 6])\nprint(np.dot(m, n))\nprint(np.dot(n, m))\nprint(m @ n)\nprint(n @ m)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[1. 1. 1.]\n [1. 1. 1.]]\n[[2 2]\n [2 2]\n [2 2]]\n[[6. 6.]\n [6. 6.]]\n[[6. 6.]\n [6. 6.]]\n\n\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n1.0\n3.0\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n[[2. 2.]\n [2. 2.]\n [2. 2.]]\n\n\n32\n32\n32\n32\n"
+        }
+      ],
+      "execution_count": 186
+    },
+    {
+      "id": "dd806dda-5430-4369-91a2-59ff750be0aa",
+      "cell_type": "code",
+      "source": "# Statistical operations\nstats = np.array([[1, 2, 3],[4, 5, 6]])\nprint(stats)\nprint(np.mean(stats))\nprint(np.min(stats))\nprint(np.min(stats,axis=0)) #Column-wise: It looks down each column and picks the smallest number.\nprint(np.min(stats,axis=1)) #Row-wise: It looks across each row and picks the smallest number.\nprint(np.max(stats))\nprint(np.std(stats))\nprint(np.sum(stats))\nprint(np.sum(stats,axis=0))\nprint(np.sum(stats,axis=1))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[1 2 3]\n [4 5 6]]\n3.5\n1\n[1 2 3]\n[1 4]\n6\n1.707825127659933\n21\n[5 7 9]\n[ 6 15]\n"
+        }
+      ],
+      "execution_count": 199
+    },
+    {
+      "id": "d98b1d84-bccc-4cd0-abc8-8a742d98a4ce",
+      "cell_type": "code",
+      "source": "# Reorganizing arrays\n\n",
       "metadata": {
         "trusted": true
       },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 200
     }
   ]
 }
