--- a/youtube_numpy_tutorial_freecodecamp.ipynb
+++ b/youtube_numpy_tutorial_freecodecamp.ipynb
@@ -29,7 +29,7 @@
           "text": "[1 2 3]\n"
         }
       ],
-      "execution_count": 1
+      "execution_count": 3
     },
     {
       "id": "03864d85-f57c-4481-ab1c-6bd01018e515",
@@ -45,7 +45,7 @@
           "text": "[[9. 8. 7.]\n [6. 5. 4.]]\n"
         }
       ],
-      "execution_count": 2
+      "execution_count": 4
     },
     {
       "id": "4a64b4be-36bd-4445-b7c6-100d07ac12a2",
@@ -61,7 +61,7 @@
           "text": "1\n2\n"
         }
       ],
-      "execution_count": 3
+      "execution_count": 5
     },
     {
       "id": "49fe1eb3-1d4b-43c3-9d92-2b3104626b79",
@@ -77,7 +77,7 @@
           "text": "(3,)\n(2, 3)\n"
         }
       ],
-      "execution_count": 4
+      "execution_count": 6
     },
     {
       "id": "7426888f-e676-409f-b7eb-db0a5081bed9",
@@ -93,7 +93,7 @@
           "text": "3\n6\n"
         }
       ],
-      "execution_count": 5
+      "execution_count": 7
     },
     {
       "id": "54799a67-a1cd-4cb7-ba17-bc473f4b2e62",
@@ -109,7 +109,7 @@
           "text": "int32\nfloat64\n"
         }
       ],
-      "execution_count": 6
+      "execution_count": 8
     },
     {
       "id": "897091be-cab9-40ac-a9e5-8bfae1ac9eb4",
@@ -125,7 +125,7 @@
           "text": "4\n8\n"
         }
       ],
-      "execution_count": 7
+      "execution_count": 9
     },
     {
       "id": "4fa6f701-4995-40e3-b44f-4d2d2d0d5715",
@@ -141,7 +141,7 @@
           "text": "12\n12\n48\n48\n"
         }
       ],
-      "execution_count": 8
+      "execution_count": 10
     },
     {
       "id": "697d212c-b2f2-4dbb-a1bf-c8180ef695d1",
@@ -157,7 +157,7 @@
           "text": "[[ 1  2  3  4  5  6  7]\n [ 8  9 10 11 12 13 14]]\n(2, 7)\n"
         }
       ],
-      "execution_count": 9
+      "execution_count": 11
     },
     {
       "id": "c3d68605-98ce-4015-b533-8ff33d8c30fc",
@@ -173,7 +173,7 @@
           "text": "13\n13\n"
         }
       ],
-      "execution_count": 14
+      "execution_count": 12
     },
     {
       "id": "96f5157f-b3db-426b-b6f1-73e61b508200",
@@ -189,7 +189,7 @@
           "text": "[1 2 3 4 5 6 7]\n(7,)\n"
         }
       ],
-      "execution_count": 21
+      "execution_count": 13
     },
     {
       "id": "b279dd5a-2f4b-40f7-81ba-77a0ac00bbc8",
@@ -205,7 +205,7 @@
           "text": "[ 3 10]\n(2,)\n"
         }
       ],
-      "execution_count": 22
+      "execution_count": 14
     },
     {
       "id": "1bc458da-89ec-4ba7-9057-6e59257c170a",
@@ -221,7 +221,7 @@
           "text": "[2 4 6]\n[2 4 6]\n"
         }
       ],
-      "execution_count": 27
+      "execution_count": 15
     },
     {
       "id": "84815237-e71e-4209-af3e-f6bda66f62a6",
@@ -237,7 +237,7 @@
           "text": "[[ 1  2  3  4  5  6  7]\n [ 8  9 10 11 12 20 14]]\n"
         }
       ],
-      "execution_count": 29
+      "execution_count": 16
     },
     {
       "id": "4e519e36-b678-4b0c-b3d9-c9947f621855",
@@ -253,7 +253,7 @@
           "text": "[[ 1  2  0  4  5  6  7]\n [ 8  9  0 11 12 20 14]]\n[[ 1  2 -1  4  5  6  7]\n [ 8  9 -2 11 12 20 14]]\n"
         }
       ],
-      "execution_count": 31
+      "execution_count": 17
     },
     {
       "id": "8315a403-1129-4efa-a177-ad2edc7b9be4",
@@ -269,7 +269,7 @@
           "text": "[[[1 2]\n  [3 4]]\n\n [[5 6]\n  [7 8]]]\n4\n[1 5]\n"
         }
       ],
-      "execution_count": 41
+      "execution_count": 18
     },
     {
       "id": "50d23f4f-9034-45f1-b683-c4be48a58b59",
@@ -285,7 +285,7 @@
           "text": "[[[1 2]\n  [9 9]]\n\n [[5 6]\n  [8 8]]]\n"
         }
       ],
-      "execution_count": 44
+      "execution_count": 19
     },
     {
       "id": "81e89b6a-c418-49ef-927f-a2475ffa7f4c",
@@ -301,7 +301,7 @@
           "text": "[0 0 0 0 0]\n[[0. 0. 0.]\n [0. 0. 0.]]\n"
         }
       ],
-      "execution_count": 55
+      "execution_count": 20
     },
     {
       "id": "7d208fa5-d4f8-4866-9723-7da610a7af38",
@@ -317,7 +317,7 @@
           "text": "[1. 1. 1. 1. 1.]\n[[1. 1. 1.]\n [1. 1. 1.]]\n"
         }
       ],
-      "execution_count": 53
+      "execution_count": 21
     },
     {
       "id": "238ce19e-af75-4735-be1b-92d110854259",
@@ -333,7 +333,7 @@
           "text": "[[99 99 99 99]\n [99 99 99 99]]\n[[6 6 6 6 6 6 6]\n [6 6 6 6 6 6 6]]\n[[8 8 8 8 8 8 8]\n [8 8 8 8 8 8 8]]\n"
         }
       ],
-      "execution_count": 65
+      "execution_count": 22
     },
     {
       "id": "e0ceca51-7ca8-4952-a2cd-472cbcde38ad",
@@ -349,7 +349,7 @@
           "text": "[[1. 0.]\n [0. 1.]\n [0. 0.]]\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n"
         }
       ],
-      "execution_count": 112
+      "execution_count": 23
     },
     {
       "id": "f842b523-f50c-456a-952f-0debc700a3a9",
@@ -362,10 +362,10 @@
         {
           "name": "stdout",
           "output_type": "stream",
-          "text": "[[0.20561584 0.18609491]\n [0.70867802 0.58688303]\n [0.26772938 0.66282422]\n [0.14723234 0.37631878]]\n[0.41605455 0.46310036 0.65857571]\n"
+          "text": "[[0.01520958 0.8453391 ]\n [0.31500909 0.18479921]\n [0.87918124 0.84798559]\n [0.72531194 0.19674838]]\n[0.33580845 0.76099633 0.3799167 ]\n"
         }
       ],
-      "execution_count": 108
+      "execution_count": 24
     },
     {
       "id": "6a99d53c-2e1d-49a1-9335-e3cd651c7c30",
@@ -378,10 +378,10 @@
         {
           "name": "stdout",
           "output_type": "stream",
-          "text": "[[7 6]\n [4 5]\n [7 7]\n [7 7]]\n[[-2 -3]\n [-3 -3]]\n"
+          "text": "[[4 4]\n [6 4]\n [4 4]\n [7 4]]\n[[-3 -2]\n [-2 -3]]\n"
         }
       ],
-      "execution_count": 109
+      "execution_count": 25
     },
     {
       "id": "07eb9986-0e45-4ad1-a3c5-a733801f03dd",
@@ -397,7 +397,7 @@
           "text": "[1 2 3]\n[1 1 1 2 2 2 3 3 3]\n\n\n[[1 2 3]]\n[[1 2 3]\n [1 2 3]\n [1 2 3]]\n[[1 1 1 2 2 2 3 3 3]]\n"
         }
       ],
-      "execution_count": 129
+      "execution_count": 26
     },
     {
       "id": "7db243fb-1c50-4edc-8fbd-ebacffb485b1",
@@ -408,7 +408,7 @@
       },
       "outputs": [
         {
-          "execution_count": 139,
+          "execution_count": 27,
           "output_type": "execute_result",
           "data": {
             "text/plain": "array([[1., 1., 1., 1., 1.],\n       [1., 0., 0., 0., 1.],\n       [1., 0., 9., 0., 1.],\n       [1., 0., 0., 0., 1.],\n       [1., 1., 1., 1., 1.]])"
@@ -416,7 +416,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 139
+      "execution_count": 27
     },
     {
       "id": "bbb8a8f6-8125-4c9a-84f9-1a1a4a61741b",
@@ -432,7 +432,7 @@
           "text": "[1 2 3]\n[1 2 3]\n[100   2   3]\n[100   2   3]\n"
         }
       ],
-      "execution_count": 145
+      "execution_count": 28
     },
     {
       "id": "99486656-29e2-4579-ae60-214586b9e8e8",
@@ -448,7 +448,7 @@
           "text": "[1 2 3]\n[1 2 3]\n[100   2   3]\n[1 2 3]\n"
         }
       ],
-      "execution_count": 146
+      "execution_count": 29
     },
     {
       "id": "0a6c0f74-8cd4-4b83-b46b-cb98d8cbe606",
@@ -464,7 +464,7 @@
           "text": "[1 2 3 4]\n[3 4 5 6]\n[-1  0  1  2]\n[2 4 6 8]\n[0.5 1.  1.5 2. ]\n[0 1 1 2]\n[1 0 1 0]\n[10 11 12 13]\n[100 121 144 169]\n[-0.54402111 -0.99999021 -0.53657292  0.42016704]\n"
         }
       ],
-      "execution_count": 166
+      "execution_count": 30
     },
     {
       "id": "cf6fd34f-7cfe-4c45-9d35-cabf5c750954",
@@ -480,7 +480,7 @@
           "text": "[[1. 1. 1.]\n [1. 1. 1.]]\n[[2 2]\n [2 2]\n [2 2]]\n[[6. 6.]\n [6. 6.]]\n[[6. 6.]\n [6. 6.]]\n\n\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n1.0\n3.0\n[[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\n[[2. 2.]\n [2. 2.]\n [2. 2.]]\n\n\n32\n32\n32\n32\n"
         }
       ],
-      "execution_count": 186
+      "execution_count": 31
     },
     {
       "id": "dd806dda-5430-4369-91a2-59ff750be0aa",
@@ -496,17 +496,113 @@
           "text": "[[1 2 3]\n [4 5 6]]\n3.5\n1\n[1 2 3]\n[1 4]\n6\n1.707825127659933\n21\n[5 7 9]\n[ 6 15]\n"
         }
       ],
-      "execution_count": 199
+      "execution_count": 32
     },
     {
       "id": "d98b1d84-bccc-4cd0-abc8-8a742d98a4ce",
       "cell_type": "code",
-      "source": "# Reorganizing arrays\n\n",
+      "source": "# Reorganizing arrays\n\nbefore = np.array([[1,2,3,4],[5,6,7,8]])\nprint(before)\nprint(before.shape)\n\nprint(\"\\n\")\n\nafter_2d = before.reshape((4,2))\nprint(after_2d)\nprint(after_2d.shape)\n\nprint(\"\\n\")\n\nafter_3d = before.reshape((2,2,2))\nprint(after_3d)\nprint(after_3d.shape)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[1 2 3 4]\n [5 6 7 8]]\n(2, 4)\n\n\n[[1 2]\n [3 4]\n [5 6]\n [7 8]]\n(4, 2)\n\n\n[[[1 2]\n  [3 4]]\n\n [[5 6]\n  [7 8]]]\n(2, 2, 2)\n"
+        }
+      ],
+      "execution_count": 33
+    },
+    {
+      "id": "34b33cb4-f48d-4101-b1d3-9b476deada57",
+      "cell_type": "code",
+      "source": "# Vertical & horizontal stacking\nv1 = np.array([1,2,3,4])\nv2 = np.array([5,6,7,8])\nprint(np.vstack((v1,v2,v1)))\nprint(np.hstack((v1,v2,v1)))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[1 2 3 4]\n [5 6 7 8]\n [1 2 3 4]]\n[1 2 3 4 5 6 7 8 1 2 3 4]\n"
+        }
+      ],
+      "execution_count": 34
+    },
+    {
+      "id": "9ff4c85b-6f0d-4617-824e-e3b4416314ec",
+      "cell_type": "code",
+      "source": "# Misc\na = np.array([1,2,3,4])\nprint(a)\nb = a.astype('float64')\nprint(b)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1 2 3 4]\n[1. 2. 3. 4.]\n"
+        }
+      ],
+      "execution_count": 35
+    },
+    {
+      "id": "0f6a5b12-4efc-42f3-a2fc-02d77a59e048",
+      "cell_type": "code",
+      "source": "# Advanced indexing and boolean masking\na = np.random.rand(5,2)\nprint(a)\nprint(a < 0.5)\nprint(a[a < 0.5])\nprint(a[(a > 0.2) & (a < 0.6)])\n\nprint(\"\\n\")\n\nprint(np.any(a < 0.2, axis=0)) # Checks if any of the elements per column is less than 0.2\nprint(np.any(a < 0.2, axis=1)) # Checks if any of the elements per row is less than 0.2\nprint(np.all(a > 0.3, axis=0)) # Checks if all of the elements per column is greater than 0.3\nprint(np.all(a > 0.3, axis=1)) # Checks if all of the elements per row is greater than 0.3\n\n",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[0.07374553 0.44005717]\n [0.86044518 0.55778868]\n [0.32120252 0.32823776]\n [0.70913489 0.65958241]\n [0.63013502 0.76777684]]\n[[ True  True]\n [False False]\n [ True  True]\n [False False]\n [False False]]\n[0.07374553 0.44005717 0.32120252 0.32823776]\n[0.44005717 0.55778868 0.32120252 0.32823776]\n\n\n[ True False]\n[ True False False False False]\n[False  True]\n[False  True  True  True  True]\n"
+        }
+      ],
+      "execution_count": 36
+    },
+    {
+      "id": "2b3d8558-ca80-4422-9e75-907ad87f1621",
+      "cell_type": "code",
+      "source": "# Intermediate practice example\na = np.array([ [1,2,3,4,5], [6,7,8,9,10], [11,12,13,14,15], [16,17,18,19,20], [21,22,23,24,25], [26,27,28,29,30] ])\nprint(a)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[ 1  2  3  4  5]\n [ 6  7  8  9 10]\n [11 12 13 14 15]\n [16 17 18 19 20]\n [21 22 23 24 25]\n [26 27 28 29 30]]\n"
+        }
+      ],
+      "execution_count": 37
+    },
+    {
+      "id": "d10b3d81-feea-47a1-ada8-aebab14c86ad",
+      "cell_type": "code",
+      "source": "print(a[2:4,0:2])\nprint(a[ [0,1,2,3], [1,2,3,4,] ])\nprint(a[ [0,4,5], 3:])",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[[11 12]\n [16 17]]\n[ 2  8 14 20]\n[[ 4  5]\n [24 25]\n [29 30]]\n"
+        }
+      ],
+      "execution_count": 38
+    },
+    {
+      "id": "5fb9a4ef-3bfb-4331-be10-ffca40e3caa4",
+      "cell_type": "code",
+      "source": "",
       "metadata": {
         "trusted": true
       },
       "outputs": [],
-      "execution_count": 200
+      "execution_count": null
     }
   ]
 }
